--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@
         </form>
 
         <!-- 保存按钮 -->
-        <button type="button" id="saveButton" class="btn btn-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">保存个人信息</button>
+        <!-- 【按钮可视性保障】优化保存按钮位置 -->
+        <div style="position: fixed; bottom: 70px; left: 0; right: 0; padding: 0 20px; max-width: 480px; margin: 0 auto;">
+            <button type="button" id="saveButton" class="btn btn-primary">保存个人信息</button>
+        </div>
     </div>
 
     <!-- 底部导航栏 -->
